<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HolidayInnActivity"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:text="Features"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="28dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="Popular Features "
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="->Free Wifi "
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">

        </TextView>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="->Free Parking "
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">

        </TextView>
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="->Swimming Poll "
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">

        </TextView>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="->Airport Shuttle "
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">

        </TextView>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="->Restaurent "
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="->24-Hour reception "
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="General "
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="@string/Holiday_General"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="Activities "
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="@string/Holiday_Activities"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="Cost: "
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/hotelImage"
            android:background="@drawable/horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="@string/room_prices1"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="@string/room_prices2"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingTop="10dp"
            android:text="@string/room_prices3"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            tools:ignore="RtlCompat">
        </TextView>

        <Button
            android:id="@+id/radissionblue_book_id"
            android:layout_width="240sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="50dp"
            android:text="Book Now"
            android:textAlignment="center"
            android:textColor="@color/colorPaste"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal">

        </Button>
    </LinearLayout>

</ScrollView>